# pyside6_android_helloworld

./: .gitignore  README.md  buildozer.spec  configure.py  main.py  pyproject.toml
